# moetran-poprako

./: .gitignore  .prettierrc.json  Makefile  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/: copilot-instructions.md
docs/: api.md  api_ipc.md  api_poprako.md  filter_refactor_summary.md  requirements.md  todos.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  defer.rs  http.rs  image_cache.rs  lib.rs  main.rs  member.rs  notify.rs  project.rs  result_ex.rs  storage.rs  team.rs  token.rs  user.rs
src-tauri/src/storage/: cache_metadata.rs  token.rs
src/api/: moetran.ts  poprako.ts
src/api/model/: assignment.ts  auth.ts  displayProject.ts  filterOption.ts  member.ts  project.ts  shownProject.ts  team.ts  user.ts
src/components/: AppToast.vue  AssignmentFilterBoard.vue  AssignmentList.vue  CachedProjectsModal.vue  CircularProgress.vue  FileUploader.vue  LoadingCircle.vue  MemberFilterBoard.vue  MemberList.vue  MemberSelector.vue  ProjectFilterBoard.vue  ProjectList.vue  RoundSwitch.vue
src/ipc/: auth.ts  image_cache.ts  member.ts  notify.ts  project.ts  team.ts  user.ts
src/model/api/: user.ts
src/stores/: cache.ts  projset.ts  router.ts  toast.ts  token.ts  upload.ts  user.ts
src/views/: LoginView.vue  PanelView.vue  ProjectCreatorView.vue  ProjectDetailView.vue  ProjectModifierView.vue  ProjectSetCreatorView.vue  ShownProjectListView.vue  TranslatorView.vue
src/views/translator/: TranslatorView.vue
